--- a/src/theme/scss/Accordian.scss
+++ b/src/theme/scss/Accordian.scss
@@ -1,30 +1,30 @@
 .MuiAccordion-root {
-    box-shadow: none;
+  box-shadow: none;
+  background-color: transparent;
+
+  &::before {
+    position: absolute;
+    left: 0;
+    top: -1px;
+    right: 0;
+    height: 1px;
+    content: "";
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.12);
+    -webkit-transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+      background-color 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+      background-color 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  }
+
+  .MuiAccordionSummary-expandIconWrapper {
+    color: $primary-brand;
+  }
+
+  &.Mui-disabled {
     background-color: transparent;
-    
-    &::before {
-        position: absolute;
-        left: 0;
-        top: -1px;
-        right: 0;
-        height: 1px;
-        content: "";
-        opacity: 1;
-        background-color: rgba(0, 0, 0, 0.12);
-        -webkit-transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-        transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    }
-
     .MuiAccordionSummary-expandIconWrapper {
-        color: $primary-brand;
+      display: none;
     }
-
-    &.Mui-disabled {
-        background-color: transparent;
-        .MuiAccordionSummary-expandIconWrapper {
-            display: none;
-        }
-    
-    }
+  }
 }
-
