sync/cleanup before transfer

--- a/src/theme/scss/Forms.scss
+++ b/src/theme/scss/Forms.scss
@@ -336,6 +336,8 @@
     border-bottom: 2px solid rgba(127, 127, 127, 0.5);
     margin: 0;
     width: 40px;
+    height: 24px;
+    padding-top: 8px;
   }
   div > div:last-child > div:last-child {
     min-height: 245px;
