--- a/src/theme/scss/cashmere.scss
+++ b/src/theme/scss/cashmere.scss
@@ -16,6 +16,7 @@ $hc-icons-font-path: "~@healthcatalyst/cashmere/hcicons";
 @import "./ButtonGroup.scss";
 @import "./ButtonToggle.scss";
 @import "./Chip.scss";
+@import "./DataTable.scss";
 @import "./IconButton.scss";
 @import "./Icon.scss";
 @import "./Navbar.scss";
