minor styling tweaks to Chips and DataTable

--- a/src/theme/scss/Chip.scss
+++ b/src/theme/scss/Chip.scss
@@ -1,6 +1,9 @@
 .MuiChip-root {
   @include hc-chip();
   line-height: 18px;
+  .MuiChip-deleteIcon {
+    opacity: 0.5;
+  }
 }
 
 .MuiChip-filledSecondary {
