fix(forms): fix calendar month name display not always showing up
fix #9

--- a/src/theme/scss/Forms.scss
+++ b/src/theme/scss/Forms.scss
@@ -339,7 +339,7 @@
     height: 24px;
     padding-top: 8px;
   }
-  div > div:last-child > div:last-child {
+  .MuiCalendarPicker-viewTransitionContainer > div:last-child > div:last-child {
     min-height: 245px;
   }
   div[role="presentation"] {
